--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -1,13 +1,21 @@
 ---
-title: BOSH
+title: BOSH Documentation
 ---
+
+## <a id="foundations"></a> BOSH Foundations ##
 
 * [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
 * [Basic BOSH Workflow](workflow.html)
+
+## <a id="working"></a> Working with BOSH ##
+
 * [Setting Up your Iaas for BOSH](iaas-setup.html)
 * [Deploying MicroBOSH](deploy-microbosh.html)
 * [Deploying Distributed Software with BOSH](deploy-with-bosh.html)
+
+## <a id="deep"></a> BOSH in Depth ##
+
 * [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
 * [Creating a BOSH Deployment Manifest](create-manifest.html)
 * [How BOSH Works](how-bosh-works.html)
