add introductory sentences for each section

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -4,11 +4,15 @@ title: BOSH Documentation
 
 ## <a id="foundations"></a> BOSH Foundations ##
 
+Required reading for novices and experts alike.
+
 * [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
 * [Basic BOSH Workflow](workflow.html)
 
 ## <a id="working"></a> Working with BOSH ##
+
+How to deploy and operate a BOSH-based environment.
 
 * [Setting Up your Iaas for BOSH](iaas-setup.html)
 * [Deploying MicroBOSH](deploy-microbosh.html)
@@ -16,6 +20,9 @@ title: BOSH Documentation
 
 ## <a id="deep"></a> BOSH in Depth ##
 
+Knowledge and skills for developers and others who go "under the hood."
+
+* [How BOSH Works](how-bosh-works.html)
 * [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
 * [Creating a BOSH Deployment Manifest](create-manifest.html)
-* [How BOSH Works](how-bosh-works.html)
+
