--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -14,7 +14,7 @@ Required reading for novices and experts alike.
 
 How to deploy and operate a BOSH-based environment.
 
-* [Setting Up your Iaas for BOSH](iaas-setup.html)
+* [Setting Up your IaaS for BOSH](iaas-setup.html)
 * [Deploying MicroBOSH](deploy-microbosh.html)
 * [Deploying Distributed Software with BOSH](deploy-with-bosh.html)
 
