add image tag to text

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -192,7 +192,7 @@ packages:
 
 The dependency graph for `ardo-release` looks like this:
 
-_insert illustration_
+  <%= image_tag("dep-graph.png") %>
 
 ## <a id="..."></a> Create packages ##
 
