add introductory sentence

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,6 +2,10 @@
 title: BOSH Documentation
 ---
 
+Once you are familiar with the Foundations material,
+feel free to skip around among the other topics
+according to what you need to do with BOSH.
+
 ## <a id="foundations"></a> BOSH Foundations ##
 
 Required reading for novices and experts alike.
