add missing word

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -2,7 +2,7 @@
 title: Creating a MicroBOSH Deployment Manifest
 ---
 
-The deployment manifest for MicroBOSH is similar the deployment manifest for multi-VM BOSH,
+The deployment manifest for MicroBOSH is similar to the deployment manifest for multi-VM BOSH,
 but much shorter.
 
 Parts of the manifest are IaaS-specific.
