fix incorrect link

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -329,7 +329,7 @@ The IP address you choose must be within the IP range of a subnet set of the net
 
 OpenStack describes VMs in terms of flavors.
 You specify the flavor in the `instance_type` attribute of the `cloud_properties` sub-block of the `resources` block.
-Choose a flavor that has some ephemeral disk as described in [validate your OpenStack](validate_openstack.html).
+Choose a flavor that has some ephemeral disk as described in [validate your OpenStack](../../deploying/openstack/validate_openstack.html).
 
 ~~~yaml
 resources:
