clarify scenarios for deploying with BOSH

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -49,6 +49,12 @@ To deploy BOSH using MicroBOSH you must:
 
 ## <a id="deploying"></a> Deploying Software with BOSH  ##
 
+The material in this section applies to either of two scenarios:
+
+* Using MicroBOSH to deploy multi-VM BOSH, Cloud Foundry, or any other software available in a BOSH release.
+
+* Using multi-VM BOSH to deploy Cloud Foundry or any other software available in a BOSH release.
+
 ### <a id="before"></a> Before you Deploy  ###
 
 Before you deploy, you must have:
