edit landing page with Kim

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -3,12 +3,13 @@ title: BOSH Documentation
 ---
 
 Once you are familiar with the Foundations material,
-feel free to skip around among the other topics
-according to what you need to do with BOSH.
+refer to other topics according to what
+you need to do with BOSH.
 
 ## <a id="foundations"></a> BOSH Foundations ##
 
-Required reading for novices and experts alike.
+This section provides both a starting point for novices and a fresh view
+for experts.
 
 * [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
@@ -24,7 +25,7 @@ How to deploy and operate a BOSH-based environment.
 
 ## <a id="deep"></a> BOSH in Depth ##
 
-Knowledge and skills for developers and others who go "under the hood."
+Knowledge and skills for developers and other experts.
 
 * [How BOSH Works](how-bosh-works.html)
 * [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
