add reference to BOSH CLI help

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -47,6 +47,10 @@ You create a directory for each, such that the path to your MicroBOSH deployment
 
     `gem install bosh_cli bosh_cli_plugin_micro`
 
+* As needed, consult the BOSH CLI help:
+
+    `bosh help --all`
+
 ### <a id="cloud"></a> Set up a deployment area in the cloud ###
 
 Collect or decide:
